Bug #13219
Fix typo in udp_ioctl()
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Debug output uses "tcp_ioctl" instead of "udp_ioctl".
Updated by Michael Zeller 5 months ago
Testing for this was just to build without the patch and with the patch and observe the wsdiff output for the ip module.
link@omniosce:/build/illumos-gate$ cat /tmp/report # This file was produced by wsdiff # 2020-10-16 at 15:24:25 Old proto area: proto/root_i386.prev/kernel/drv/amd64/ New proto area: proto/root_i386/kernel/drv/amd64/ Results file: /tmp/report kernel/drv/amd64/ip NOTE: ELF .rodata.str1.8 difference detected. 3493,3494c3493,3494 < 0066440 p o r t % d \0 t c p _ i o c t < 74726f70 00642520 5f706374 74636f69 --- > 0066440 p o r t % d \0 u d p _ i o c t > 74726f70 00642520 5f706475 74636f69
Updated by Electric Monk 5 months ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 6218f28969018904255fddf306e6489c7ae28bba
commit 6218f28969018904255fddf306e6489c7ae28bba Author: Mike Zeller <mike@mikezeller.net> Date: 2020-10-16T16:06:37.000Z 13219 Fix typo in udp_ioctl() Reviewed by: Sebastian Wiedenroth <wiedi@frubar.net> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>