13219 Fix typo in udp_ioctl() Reviewed by: Sebastian Wiedenroth <wiedi@frubar.net> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>